# proget-cli

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: deploy.yml  test.yml
makedeb/: PKGBUILD
src/: deb.rs  health.rs  main.rs
