[package]
name = "pg"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive", "env"] }
colored = "2.0.0"
exitcode = "1.1.2"
hw-msg = { version = "0.4.0", features = ["logging"] }
log = "0.4.18"
proget = { version = "0.2.3", default-features = false, features = ["rustls-tls"] }
quit = "1.1.4"
tokio = { version = "1.28.2", features = ["full"] }
url = { version = "2.3.1" }
